; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_progress_finished_percent.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_progress_finished_percent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @status_get_progress_finished_percent(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i64 @status_get_progress_cur_relative_skip(i32* %6)
  store i64 %7, i64* %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @status_get_progress_end_relative_skip(i32* %8)
  store i64 %9, i64* %4, align 8
  store double 0.000000e+00, double* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load i64, i64* %3, align 8
  %14 = sitofp i64 %13 to double
  %15 = load i64, i64* %4, align 8
  %16 = sitofp i64 %15 to double
  %17 = fdiv double %14, %16
  %18 = fmul double %17, 1.000000e+02
  store double %18, double* %5, align 8
  br label %19

19:                                               ; preds = %12, %1
  %20 = load double, double* %5, align 8
  ret double %20
}

declare dso_local i64 @status_get_progress_cur_relative_skip(i32*) #1

declare dso_local i64 @status_get_progress_end_relative_skip(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
